--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.13",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.6",
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
