--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "no-unused-expressions": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "no-unused-expressions": "warn",
     "prefer-const": "error",
     "no-console": "warn",
     "no-undef": "error"
