--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
     "no-unused-expressions": "warn",
     "prefer-const": "error",
