--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.13",
+    "sslcommerz-lts": "^1.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
